--- a/Trang-chu/Trang-chu.css
+++ b/Trang-chu/Trang-chu.css
@@ -2,6 +2,7 @@
     border: 0;
     margin: 0;
     box-sizing: border-box;
+    font-family: Arial, Helvetica, sans-serif;
 }
 .viewport {
     display: grid;
@@ -9,7 +10,7 @@
 }
 .menu {
     height: 100vh;
-    width: 13vw;
+    width: 16vw;
     background-color: #A5F3FC;
     
 
@@ -21,55 +22,110 @@
     align-items: center;
 }
 #logo {
-    height: 10vh;
+    height: 13vh;
     width: 10vw;
     display: block;
     
+}
+.logo-name i {
+    margin-right: 10px;
+    font-size: 30px;
+}
+.logo-name button {
+    height: 60%;
+    min-width: 15%;
+    width: auto;
+    background-color: #1DCBDF;
+    margin-right: 20px;
+    border-radius: 5px;
+    font-size: 1.3rem;
+    font-weight: 300;
+    box-shadow: 3px 3px 5px 0px #a5a5a5;
 }
 #trang-chu {
     height: 60px;
     width: 90%;
     margin-top: 30px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-left: 10px;
     font-size: 1rem;
     background-color: #ffffff;
     border-radius: 10px;
+    font-size: 18px;
     
+}
+#trang-chu a {
+    color: black; 
+
 }
 a {
     text-decoration: none;
+    
 }
 
 .header {
-    height: 7vh;
-    width: 87vw;
+    height: 10vh;
+    width: 84vw;
     display: grid;
     grid-template-columns: auto auto;
-    border-bottom: 1px solid #ccc;
+    box-shadow: 3px 3px 5px 0px #0000001a;
 
 }
 .search {
     display: flex;
     align-items: center;
+    position: relative;
 }
 .search input {
     height: 60%;
-    width: 40%;
-    border: 1px solid black;
+    width: 60%;
+    padding-left: 40px;
+    border: 2px solid black;
     border-radius: 20px;
     margin-left: 3vw;
+}
+.search i {
+    position: absolute;
+    left: 60px;
+    font-size: 25px;
 }
 .login-register {
     display: flex;
     align-items: center;
-    justify-content: flex-end; /* Align items to the right */
+    justify-content: flex-end;
     margin-right: 30px;
+    font-size: 16px;
 }
-button {
+.login-register button {
     height: 60%;
     min-width: 15%;
     width: auto;
-    background-color: #A5F3FC;
+    background-color: #1DCBDF;
     margin-right: 20px;
     border-radius: 5px;
-    font-size: 1rem;
+    font-size: 1.3rem;
+    font-weight: 300;
+    box-shadow: 3px 3px 5px 0px #a5a5a5;
+}
+.login-register  a {
+    color: white;
+}
+.title-content {
+    height: 55px;
+    width: 98%;
+    margin: 30px auto;
+    display: flex;
+    align-items: center;
+    box-shadow: 3px 3px 5px 0px #a5a5a5;
+    border-radius: 15px;
+    background-color: #1DCBDF;
+}
+.title-content > p{
+    font-weight: bold;
+    font-size: 25px;
+    margin-left: 20px;
+    color: white;
+
 }
