--- a/Trang-chu/Trang-chu.css
+++ b/Trang-chu/Trang-chu.css
@@ -25,11 +25,6 @@
     height: 13vh;
     width: 10vw;
     display: block;
-    
-}
-.logo-name i {
-    margin-right: 10px;
-    font-size: 30px;
 }
 .menu button {
     margin-right: 10px;
@@ -52,6 +47,11 @@
 #trang-chu a {
     color: black; 
 
+}
+#trang-chu img {
+    margin-right: 10px;
+    height: 40px;
+    width: 40px;
 }
 a {
     text-decoration: none;
@@ -79,10 +79,11 @@ a {
     border-radius: 20px;
     margin-left: 3vw;
 }
-.search i {
+.search img {
+    height: 25px;
+    width: 25px;
     position: absolute;
     left: 60px;
-    font-size: 25px;
 }
 .login-register {
     display: flex;
