--- a/Register/Register.css
+++ b/Register/Register.css
@@ -13,19 +13,16 @@ body{
 
 .body_login{
     width: 540px;
-    height: 500px;
+    height: 510px;
     border-radius: 10px;
     background: white;
 }
-.btn_close button{
+.btn_close{
     margin-top: 15px;
-    margin-left: 510px;
-    border: none;
-   background-color: white;
+    margin-left: 505px;
 }
-.btn_close button i{
+.btn_close a i{
     font-size: 20px;
-  
 }
 .body_login h1{
     font-size: 36px;
