--- a/Trang-chu/Trang-chu.css
+++ b/Trang-chu/Trang-chu.css
@@ -319,3 +319,23 @@ body {
   border-radius: 50%;
   list-style-type: none;
 }
+.modal {
+  display: none; /* Ẩn modal theo mặc định */
+  position: fixed;
+  z-index: 2;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgba(0,0,0,0.4);
+}
+
+.modal-content {
+  width: 540px;
+  height: 380px;
+  border-radius: 10px;
+  background: white;
+  border-radius: 10px;
+  margin: 120px auto;
+}
