--- a/Tai-Khoan/Tai-Khoan.css
+++ b/Tai-Khoan/Tai-Khoan.css
@@ -119,7 +119,7 @@ body {
   list-style: none;
   height: 50px;
 }
-.trang-chu {
+#tai-khoan{
   background-color: white;
   border-radius: 10px;
   box-shadow: 0 6px 12px -2px #32325d40, 0 3px 7px -3px #0000004d;
@@ -257,7 +257,7 @@ body {
   #sidebar-open {
     display: block;
   }
-  .btn-in {
+  .btn-out {
     display: none;
   }
 }
@@ -319,85 +319,17 @@ body {
   border-radius: 50%;
   list-style-type: none;
 }
-
-
-.btn_close{
-  margin-top: 15px;
-  margin-left: 505px;
-}
-.btn_close a i{
-  font-size: 20px;
-}
-h1{
-  font-size: 36px;
-  text-align: center;
-  color: rgb(29 203 223) ;
-  padding-bottom: 20px;
-  padding-top: 0px;
-}   
-.input_box{
-  position: relative;
-  margin: 10px 8%;
-}
-.input_box input{
-  width: 460px;
-  height: 40px;
-  border-radius: 5px;
-  border: solid 1px gray;
-  padding-left: 10px;
-}
-input:hover{
-  border:solid 2px rgb(29 203 223);
-}
-.input_box i{
-  position: absolute;
-  right: 5px;
-  top: 50%;
-  transform: translateY(-50%);
-}
-.text_remember_login {
-  text-decoration: none;
-  color: gray;
-  padding-left: 10%;
-}
-.btn_login{
-  margin-top: 35px;
-  margin-left: 12%;
-}
-.btn_login button{
-  height: 35px;
-  width: 440px;
-  background: rgb(29 203 223);
+#TaoTK{
+  background-color: #1DCBDF;
   color: white;
-  border: none;
+  font-weight: 600;
+  box-shadow: 0px 2px 5px 0px gray;
+  padding: 7px 25px;
   font-size: 20px;
-  border-radius: 5px;
+  border: 2px solid #1DCBDF;
 }
-.text_register a{
-  text-decoration: none;
-  color: rgb(29 203 223);
-}
-.text_register{
-  color: gray;
-  margin: 10px 20%;
-}
-.modal {
-  display: none; /* Ẩn modal theo mặc định */
-  position: fixed;
-  z-index: 2;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  overflow: auto;
-  background-color: rgba(0,0,0,0.4);
-}
-
-.modal-content {
-  width: 540px;
-  height: 380px;
-  border-radius: 10px;
-  background: white;
-  border-radius: 10px;
-  margin: 120px auto;
+#TaoTK:hover{
+  background-color: white;
+  color: #1DCBDF;
+  border: 2px solid #1DCBDF;
 }
