--- a/Trang-chu/Trang-chu.css
+++ b/Trang-chu/Trang-chu.css
@@ -164,7 +164,7 @@ body {
 
 .navbar {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
   flex-wrap: nowrap;
   padding: 10px 20px;
@@ -231,9 +231,10 @@ body {
 
 /* Responsive */
 @media screen and (max-width: 1100px) {
-  .navbar {
+  /* cái này dẫn đến lỗi thanh navbar bị thụt lùi */
+  /* .navbar {
     left: 65%;
-  }
+  } */
 }
 @media screen and (max-width: 800px) {
   .sidebar {
@@ -250,6 +251,7 @@ body {
     display: none;
   }
   .navbar {
+    
     left: 0;
     max-width: 100%;
     transform: translateX(0%);
@@ -285,25 +287,25 @@ body {
   margin: 0;
   padding: 0;
 }
-/* Khi sidebar mở khóa */
+
 .colum-content.locked {
-  margin-left: 270px; /* Độ rộng của sidebar */
-  width: calc(100% - 270px); /* Độ rộng của colum-content trừ đi độ rộng của sidebar */
+  margin-left: 270px; 
+  width: calc(100% - 270px);
 }
 
-/* Khi sidebar đóng */
+
 .colum-content.closed {
-  margin-left: 75px; /* Độ rộng của sidebar khi thu gọn */
-  width: calc(100% - 75px); /* Độ rộng của colum-content trừ đi độ rộng của sidebar thu gọn */
+  margin-left: 75px; 
+  width: calc(100% - 75px);
 }
 
-/* Khi sidebar không có */
+
 .colum-content.full {
-  margin-left: 0; /* Không có sidebar */
-  width: 100%; /* Độ rộng của colum-content chiếm toàn bộ không gian */
+  margin-left: 0; 
+  width: 100%; 
 }
 
-/* Đảm bảo colum-content chiếm toàn bộ chiều rộng màn hình */
+
 .colum-content {
   transition: margin-left 0.4s ease, width 0.4s ease;
 }
@@ -318,4 +320,9 @@ body {
   height: 10px;
   border-radius: 50%;
   list-style-type: none;
+}
+.btn-in{
+  height: 46px;
+  white-space: nowrap;
+  
 }
