--- a/Trang-chu-admin/Trang-chu-admin.css
+++ b/Trang-chu-admin/Trang-chu-admin.css
@@ -230,9 +230,9 @@ body {
 
 /* Responsive */
 @media screen and (max-width: 1100px) {
-  .navbar {
+  /* .navbar {
     left: 65%;
-  }
+  } */
 }
 @media screen and (max-width: 800px) {
   .sidebar {
@@ -286,20 +286,20 @@ body {
 }
 /* Khi sidebar mở khóa */
 .colum-content.locked {
-  margin-left: 270px; /* Độ rộng của sidebar */
-  width: calc(100% - 270px); /* Độ rộng của colum-content trừ đi độ rộng của sidebar */
+  margin-left: 270px; 
+  width: calc(100% - 270px); 
 }
 
 /* Khi sidebar đóng */
 .colum-content.closed {
-  margin-left: 75px; /* Độ rộng của sidebar khi thu gọn */
-  width: calc(100% - 75px); /* Độ rộng của colum-content trừ đi độ rộng của sidebar thu gọn */
+  margin-left: 75px;
+  width: calc(100% - 75px); 
 }
 
 /* Khi sidebar không có */
 .colum-content.full {
-  margin-left: 0; /* Không có sidebar */
-  width: 100%; /* Độ rộng của colum-content chiếm toàn bộ không gian */
+  margin-left: 0; 
+  width: 100%; 
 }
 
 /* Đảm bảo colum-content chiếm toàn bộ chiều rộng màn hình */
@@ -317,4 +317,9 @@ body {
   height: 10px;
   border-radius: 50%;
   list-style-type: none;
+}
+.btn-in{
+  height: 46px;
+  white-space: nowrap;
+  
 }
