--- a/Trang-chu-admin/Trang-chu-admin.css
+++ b/Trang-chu-admin/Trang-chu-admin.css
@@ -51,7 +51,7 @@ body {
 .logo-name {
   color: #333;
   transition: all 0.3s ease;
-  font-family: "Marck Script", cursive;
+  font-family: cursive;
   font-size: 30px;
   font-weight: 400;
   font-style: normal;
@@ -227,7 +227,11 @@ body {
   width: 40px;
   margin-left: 20px;
 }
-
+.btn-out {
+  height: 46px;
+  white-space: nowrap;
+  margin-left: 3px;
+}
 /* Responsive */
 @media screen and (max-width: 1100px) {
   /* .navbar {
