--- a/Tai-Khoan/Tai-Khoan.css
+++ b/Tai-Khoan/Tai-Khoan.css
@@ -1,5 +1,4 @@
-/* Import Google font - Poppins */
-/* @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap"); */
+
 * {
   margin: 0;
   padding: 0;
@@ -52,7 +51,7 @@ body {
 .logo-name {
   color: #333;
   transition: all 0.3s ease;
-  font-family: "Marck Script", cursive;
+  font-family: cursive;
   font-size: 30px;
   font-weight: 400;
   font-style: normal;
@@ -69,7 +68,7 @@ body {
   color: #4070f4;
   font-size: 27px;
   cursor: pointer;
-  margin-left: 30px;
+  margin-left: 25px;
   transition: all 0.3s ease;
 }
 #sidebar-close {
@@ -119,7 +118,7 @@ body {
   list-style: none;
   height: 50px;
 }
-#tai-khoan{
+#tai-khoan {
   background-color: white;
   border-radius: 10px;
   box-shadow: 0 6px 12px -2px #32325d40, 0 3px 7px -3px #0000004d;
@@ -228,12 +227,16 @@ body {
   width: 40px;
   margin-left: 20px;
 }
-
+.btn-out {
+  height: 46px;
+  white-space: nowrap;
+  margin-left: 3px;
+}
 /* Responsive */
 @media screen and (max-width: 1100px) {
-  .navbar {
+  /* .navbar {
     left: 65%;
-  }
+  } */
 }
 @media screen and (max-width: 800px) {
   .sidebar {
@@ -287,20 +290,20 @@ body {
 }
 /* Khi sidebar mở khóa */
 .colum-content.locked {
-  margin-left: 270px; /* Độ rộng của sidebar */
-  width: calc(100% - 270px); /* Độ rộng của colum-content trừ đi độ rộng của sidebar */
+  margin-left: 270px; 
+  width: calc(100% - 270px); 
 }
 
 /* Khi sidebar đóng */
 .colum-content.closed {
-  margin-left: 75px; /* Độ rộng của sidebar khi thu gọn */
-  width: calc(100% - 75px); /* Độ rộng của colum-content trừ đi độ rộng của sidebar thu gọn */
+  margin-left: 75px;
+  width: calc(100% - 75px); 
 }
 
 /* Khi sidebar không có */
 .colum-content.full {
-  margin-left: 0; /* Không có sidebar */
-  width: 100%; /* Độ rộng của colum-content chiếm toàn bộ không gian */
+  margin-left: 0; 
+  width: 100%; 
 }
 
 /* Đảm bảo colum-content chiếm toàn bộ chiều rộng màn hình */
@@ -319,17 +322,57 @@ body {
   border-radius: 50%;
   list-style-type: none;
 }
+.btn-in{
+  height: 46px;
+  white-space: nowrap;
+  
+}
 #TaoTK{
   background-color: #1DCBDF;
   color: white;
   font-weight: 600;
   box-shadow: 0px 2px 5px 0px gray;
-  padding: 7px 25px;
+  padding: 7px 30px;
   font-size: 20px;
   border: 2px solid #1DCBDF;
+  margin-top: 10px;
 }
 #TaoTK:hover{
   background-color: white;
   color: #1DCBDF;
   border: 2px solid #1DCBDF;
+}
+#table{
+  width: 99%;
+  margin: 15px 10px;
+  padding: 10px;
+  text-align: center;
+}
+.table th:first-child {
+  border-top-left-radius: 10px;
+}
+.table th:last-child {
+  border-top-right-radius: 10px;
+}
+.table tr:last-child td:first-child {
+  border-bottom-left-radius: 10px;
+}
+.table tr:last-child td:last-child {
+  border-bottom-right-radius: 10px;
+}
+.table th{
+  background-color: #A5F3FC;
+  font-weight: 500;
+}
+.ChucNang{
+  margin-left: 10px;
+  padding: 2px 10px;
+  background-color: white;
+  border-radius: 5px;
+}
+#btn-sua{
+  border: 1px solid blue;
+}
+#btn-xoa{
+  border: 1px solid red;
 }
