--- a/Danh-muc/Danh-muc.css
+++ b/Danh-muc/Danh-muc.css
@@ -317,8 +317,6 @@ body {
   height: 46px;
   white-space: nowrap;
 }
-.btn-add {
-}
 .btn-add > button {
   background-color: #1dcbdf;
   color: white;
@@ -342,8 +340,18 @@ body {
   box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
 }
 .table th {
-  border-right: 1px solid rgb(182, 169, 153);
-  
+  position: relative;
+  border-right: none;
+}
+
+.table th::after {
+  content: '';
+  position: absolute;
+  top: 25%;
+  right: 0;
+  width: 1px;
+  height: 50%;
+  background-color: rgb(182, 169, 153);
 }
 .table th:first-child {
   border-top-left-radius: 10px;
