--- a/Vat-tu-va-thiet-bi/Vat-tu-va-thiet-bi.css
+++ b/Vat-tu-va-thiet-bi/Vat-tu-va-thiet-bi.css
@@ -378,7 +378,7 @@ body {
   color: #1ecbe1;
 }
 .modal-body input,
-textarea {
+textarea, fieldset {
   width: 98%;
   min-height: 32px;
   border-radius: 5px;
@@ -423,5 +423,45 @@ textarea {
 }
 .upload-btn-wrapper span {
   margin-top: 5px;
+}
+
+input[type="search"] {
+  font-size: 18px;
+  padding: 5px;
+  height: 35px;
+  width: 100%;
+  outline: none;
+  border-radius: 5px;
+  color: blue;
+
+}
+
+datalist {
+  position: absolute;
+  background-color: white;
+  border: 1px solid #4096fe;
+  border-radius: 0 0 5px 5px;
+  border-top: none;
+  font-family: sans-serif;
+  width: 91.4%;
+  padding: 5px;
+  max-height: 10rem;
+  overflow-y: auto;
+  display: block; /* Ensure the datalist is displayed */
+  z-index: 1;
+}
+
+option {
+  background-color: white;
+  padding: 4px;
+  color: blue;
+  margin-bottom: 1px;
+  font-size: 18px;
+  cursor: pointer;
+}
+
+option:hover,
+.active {
+  background-color: lightblue;
 }
 
