--- a/Vat-tu-va-thiet-bi/Vat-tu-va-thiet-bi.css
+++ b/Vat-tu-va-thiet-bi/Vat-tu-va-thiet-bi.css
@@ -340,6 +340,16 @@ body {
   box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px,
     rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
 }
+
+.table-phieu-nhap {
+  width: 99%;
+  margin: 15px 10px;
+  padding: 10px;
+  text-align: center;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px,
+    rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
+}
+
 .table th {
   position: relative;
   border-right: none;
@@ -352,8 +362,13 @@ body {
   right: 0;
   width: 1px;
   height: 50%;
-  background-color: rgb(182, 169, 153);
+  background-color: rgb(219, 200, 176);
 }
+
+.table th:last-child::after {
+  content: none;
+}
+
 .table th:first-child {
   border-top-left-radius: 10px;
 }
@@ -426,17 +441,15 @@ textarea, fieldset {
 }
 
 input[type="search"] {
-  font-size: 18px;
   padding: 5px;
   height: 35px;
   width: 100%;
   outline: none;
   border-radius: 5px;
-  color: blue;
 
 }
 
-datalist {
+#browsers {
   position: absolute;
   background-color: white;
   border: 1px solid #4096fe;
@@ -447,21 +460,32 @@ datalist {
   padding: 5px;
   max-height: 10rem;
   overflow-y: auto;
-  display: block; /* Ensure the datalist is displayed */
+  display: block;
   z-index: 1;
 }
 
-option {
+#browsers > option {
   background-color: white;
   padding: 4px;
-  color: blue;
   margin-bottom: 1px;
-  font-size: 18px;
   cursor: pointer;
 }
 
-option:hover,
+#browsers > option:hover,
 .active {
-  background-color: lightblue;
+  background-color: #ECECEC;
 }
+.modal-body > p {
+  margin: 10px 0px;
+}
+
+.table-phieu-nhap tbody tr td {
+  height: 220px;
+  padding: 0;
+  display: flex; 
+  align-items: center;
+  justify-content: center;
+}
+
+
 
