--- a/Tai-Khoan/Tai-Khoan.css
+++ b/Tai-Khoan/Tai-Khoan.css
@@ -1,9 +1,10 @@
-
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: -apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,'Helvetica Neue',Arial,'Noto Sans',sans-serif,'Apple Color Emoji','Segoe UI Emoji','Segoe UI Symbol','Noto Color Emoji'
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji",
+    "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 }
 body {
   min-height: 100vh;
@@ -38,9 +39,8 @@ body {
   width: 270px;
   padding: 15px 10px;
   box-shadow: 0 0 2px rgba(0, 0, 0, 0.1);
-  background: #A5F3FC;
+  background: #a5f3fc;
   transition: all 0.4s ease;
-  
 }
 .sidebar.close {
   width: calc(55px + 20px);
@@ -118,7 +118,7 @@ body {
   list-style: none;
   height: 50px;
 }
-#tai-khoan {
+.el-active {
   background-color: white;
   border-radius: 10px;
   box-shadow: 0 6px 12px -2px #32325d40, 0 3px 7px -3px #0000004d;
@@ -196,7 +196,6 @@ body {
   padding: 0 15px;
   font-size: 18px;
   color: #333;
-  
 }
 .search-box-container {
   position: relative;
@@ -217,7 +216,6 @@ body {
   color: #aaa;
 }
 
-
 .search-box::placeholder {
   font-size: 14px;
   color: #aaa;
@@ -233,11 +231,6 @@ body {
   margin-left: 3px;
 }
 /* Responsive */
-@media screen and (max-width: 1100px) {
-  /* .navbar {
-    left: 65%;
-  } */
-}
 @media screen and (max-width: 800px) {
   .sidebar {
     left: 0;
@@ -275,7 +268,7 @@ body {
   border-radius: 10px;
   box-shadow: 0 6px 12px -2px #32325d40, 0 3px 7px -3px #0000004d;
 
-  background-color: #1DCBDF;
+  background-color: #1dcbdf;
   color: white;
 
   font-size: 30px;
@@ -290,23 +283,22 @@ body {
 }
 /* Khi sidebar mở khóa */
 .colum-content.locked {
-  margin-left: 270px; 
-  width: calc(100% - 270px); 
+  margin-left: 270px;
+  width: calc(100% - 270px);
 }
 
 /* Khi sidebar đóng */
 .colum-content.closed {
   margin-left: 75px;
-  width: calc(100% - 75px); 
+  width: calc(100% - 75px);
 }
 
 /* Khi sidebar không có */
 .colum-content.full {
-  margin-left: 0; 
-  width: 100%; 
+  margin-left: 0;
+  width: 100%;
 }
 
-/* Đảm bảo colum-content chiếm toàn bộ chiều rộng màn hình */
 .colum-content {
   transition: margin-left 0.4s ease, width 0.4s ease;
 }
@@ -314,7 +306,6 @@ body {
   height: 300px;
   border-radius: 20px;
   object-fit: cover;
-  
 }
 .carousel-indicators [data-bs-target] {
   width: 10px;
@@ -322,37 +313,57 @@ body {
   border-radius: 50%;
   list-style-type: none;
 }
-.btn-in{
+.btn-in {
   height: 46px;
   white-space: nowrap;
-  
 }
-#TaoTK{
-  background-color: #1DCBDF;
+.input_box i{
+  position: absolute;
+  right: 38px;
+  transform: translateY(-50%);
+}
+.btn-add > button {
+  background-color: #1dcbdf;
   color: white;
   font-weight: 600;
   box-shadow: 0px 2px 5px 0px gray;
   padding: 7px 30px;
   font-size: 20px;
-  border: 2px solid #1DCBDF;
+  border: 2px solid #1dcbdf;
   margin-top: 10px;
 }
-#TaoTK:hover{
+.btn-add > button:hover {
   background-color: white;
-  color: #1DCBDF;
-  border: 2px solid #1DCBDF;
+  color: #1dcbdf;
+  border: 2px solid #1dcbdf;
 }
-#table{
+.table-danh-muc {
   width: 99%;
   margin: 15px 10px;
   padding: 10px;
   text-align: center;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
+}
+.table th {
+  position: relative;
+  border-right: none;
+}
+
+.table th::after {
+  content: '';
+  position: absolute;
+  top: 25%;
+  right: 0;
+  width: 1px;
+  height: 50%;
+  background-color: rgb(182, 169, 153);
 }
 .table th:first-child {
   border-top-left-radius: 10px;
 }
 .table th:last-child {
   border-top-right-radius: 10px;
+  border-right: 0px;
 }
 .table tr:last-child td:first-child {
   border-bottom-left-radius: 10px;
@@ -360,19 +371,36 @@ body {
 .table tr:last-child td:last-child {
   border-bottom-right-radius: 10px;
 }
-.table th{
-  background-color: #A5F3FC;
+.table th {
+  background-color: #a5f3fc;
   font-weight: 500;
 }
-.ChucNang{
-  margin-left: 10px;
-  padding: 2px 10px;
-  background-color: white;
-  border-radius: 5px;
+
+.modal-header h4{
+   color: #1ECBE1;
 }
-#btn-sua{
-  border: 1px solid blue;
+.modal-body input, textarea {
+    width: 98%;
+    min-height: 32px;
+    border-radius: 5px;
+    border: 1px solid rgb(209, 213, 219);
 }
-#btn-xoa{
-  border: 1px solid red;
+.modal-body input:hover, 
+.modal-body textarea:hover {
+    border-color: #4096FE;
+}
+
+.modal-body input:focus, 
+.modal-body textarea:focus {
+    border-color: #4096FE;
+    outline: none;
+}
+.modal-footer .btn {
+    color: white;
+    font-size: 20px;
+    width: 100px;
+    
+}
+.modal-body p {
+  margin: 5px 0px;
 }
