--- a/Trang-chu-users/Trang-chu-users.css
+++ b/Trang-chu-users/Trang-chu-users.css
@@ -412,4 +412,179 @@ body {
   color: #1BCBDF;
   text-align: center;
 }
+.table-danh-muc {
+  width: 99%;
+  margin: 15px 10px;
+  padding: 10px;
+  text-align: center;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px,
+    rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
+}
+
+
+
+.table th {
+  position: relative;
+  border-right: none;
+}
+
+.table th::after {
+  content: "";
+  position: absolute;
+  top: 25%;
+  right: 0;
+  width: 1px;
+  height: 50%;
+  background-color: rgb(219, 200, 176);
+}
+
+.table th:last-child::after {
+  content: none;
+}
+
+.table th:first-child {
+  border-top-left-radius: 10px;
+}
+.table th:last-child {
+  border-top-right-radius: 10px;
+  border-right: 0px;
+}
+.table tr:last-child td:first-child {
+  border-bottom-left-radius: 10px;
+}
+.table tr:last-child td:last-child {
+  border-bottom-right-radius: 10px;
+}
+.table th {
+  background-color: #a5f3fc;
+  font-weight: 500;
+}
+.table-danh-muc .mo-ta {
+  width: 250px;
+}
+.modal-header h4 {
+  color: #1ecbe1;
+}
+.modal-body input,
+textarea, fieldset {
+  width: 98%;
+  min-height: 32px;
+  border-radius: 5px;
+  border: 1px solid rgb(209, 213, 219);
+}
+.modal-body input:hover,
+.modal-body textarea:hover {
+  border-color: #4096fe;
+}
+
+.modal-body input:focus,
+.modal-body textarea:focus {
+  border-color: #4096fe;
+  outline: none;
+}
+.modal-footer .btn {
+  color: white;
+  font-size: 20px;
+  width: 100px;
+}
+
+.upload-btn-wrapper {
+  position: relative;
+  display: inline-flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  border: 1px dashed gray;
+  border-radius: 10px;
+  padding: 30px 20px;
+  text-align: center;
+  background-color: #faf1f16c;
+  cursor: pointer;
+
+}
+.upload-btn-wrapper input[type="file"] {
+  font-size: 100px;
+  position: absolute;
+  left: 0;
+  top: 0;
+  opacity: 0;
+}
+.upload-btn-wrapper span {
+  margin-top: 5px;
+}
+
+input[type="search"] {
+  padding: 5px;
+  height: 35px;
+  width: 100%;
+  outline: none;
+  border-radius: 5px;
+
+}
+
+#browsers {
+  position: absolute;
+  background-color: white;
+  border: 1px solid #4096fe;
+  border-radius: 0 0 5px 5px;
+  border-top: none;
+  font-family: sans-serif;
+  width: 91.4%;
+  padding: 5px;
+  max-height: 10rem;
+  overflow-y: auto;
+  display: block;
+  z-index: 1;
+}
+
+option {
+  background-color: white;
+  padding: 4px;
+  margin-bottom: 1px;
+  cursor: pointer;
+}
+
+
+.modal-body > p {
+  margin: 10px 0px;
+}
+
+.table-phieu-nhap {
+  width: 100%;
+  margin: 15px 0px;
+  padding: 10px;
+  text-align: center;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px,
+    rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
+}
+
+.table-phieu-nhap tbody {
+  min-height: 220px;
+  padding: 0;
+}
+
+#vat-tu-dropdown{
+  position: absolute;
+  background-color: white;
+  border: 1px solid #4096fe;
+  border-radius: 0 0 5px 5px;
+  border-top: none;
+  font-family: sans-serif;
+  width: 33.2%;
+  padding: 5px;
+  max-height: 10rem;
+  overflow-y: auto;
+  display: block;
+  z-index: 1;
+}
+#vat-tu-dropdown > option {
+  background-color: white;
+  padding: 4px;
+  margin-bottom: 1px;
+  cursor: pointer;
+}
+
+option:hover, .active,  #vat-tu-dropdown > option:hover, .active {
+  background-color: #ECECEC;
+}
 
