--- a/Danh-muc/Danh-muc.css
+++ b/Danh-muc/Danh-muc.css
@@ -337,7 +337,8 @@ body {
   margin: 15px 10px;
   padding: 10px;
   text-align: center;
-  box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px,
+    rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
 }
 .table th {
   position: relative;
@@ -345,13 +346,20 @@ body {
 }
 
 .table th::after {
-  content: '';
+  content: "";
   position: absolute;
   top: 25%;
   right: 0;
   width: 1px;
   height: 50%;
-  background-color: rgb(182, 169, 153);
+  background-color: rgb(219, 200, 176);
+
+}
+
+.table th:last-child::after {
+
+  content: none;
+
 }
 .table th:first-child {
   border-top-left-radius: 10px;
@@ -371,28 +379,28 @@ body {
   font-weight: 500;
 }
 
-.modal-header h4{
-   color: #1ECBE1;
+.modal-header h4 {
+  color: #1ecbe1;
 }
-.modal-body input, textarea {
-    width: 98%;
-    min-height: 32px;
-    border-radius: 5px;
-    border: 1px solid rgb(209, 213, 219);
+.modal-body input,
+textarea {
+  width: 98%;
+  min-height: 32px;
+  border-radius: 5px;
+  border: 1px solid rgb(209, 213, 219);
 }
-.modal-body input:hover, 
+.modal-body input:hover,
 .modal-body textarea:hover {
-    border-color: #4096FE;
+  border-color: #4096fe;
 }
 
-.modal-body input:focus, 
+.modal-body input:focus,
 .modal-body textarea:focus {
-    border-color: #4096FE;
-    outline: none;
+  border-color: #4096fe;
+  outline: none;
 }
 .modal-footer .btn {
-    color: white;
-    font-size: 20px;
-    width: 100px;
-    
+  color: white;
+  font-size: 20px;
+  width: 100px;
 }
