--- a/Vat-tu-va-thiet-bi/Vat-tu-va-thiet-bi.css
+++ b/Vat-tu-va-thiet-bi/Vat-tu-va-thiet-bi.css
@@ -159,6 +159,7 @@ body {
 .sidebar-profile .email {
   font-size: 15px;
   color: #333;
+  font-weight: bold;
 }
 
 .navbar {
@@ -533,4 +534,35 @@ option:hover,
 }
 .fi-nhan-vien-nhan {
   margin-left: 22.5px;
+}
+.popover-heading {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+/* .popover-heading span {
+  margin-left: 8px;
+} */
+.popover-body {
+  display: flex;
+  justify-content: space-between;
+}
+.popover-content {
+  /* padding: 10px; */
+  width: 200px;
+  height: 60px;
+  text-align: center;
+}
+.popover-body {
+  /* padding-top: 10px; */
+}
+.popover-body button {
+  /* margin: 0 5px; */
+}
+#confirmDelete .popover-body button {
+  width: 40px;
+  height: 30px;
+  padding: 0; /* Loại bỏ padding để giữ kích thước nút */
+  font-size: 10px; /* Điều chỉnh kích thước chữ nếu cần */
+  line-height: 20px; /* Canh chỉnh vị trí chữ bên trong nút */
 }
